# talos-pilot

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
crates/talos-pilot-core/src/: async_state.rs  constants.rs  diagnostics.rs  errors.rs  formatting.rs  indicators.rs  lib.rs  network.rs  selection.rs
crates/talos-pilot-tui/: Cargo.toml
crates/talos-pilot-tui/src/: action.rs  app.rs  audit.rs  tui.rs  ui_ext.rs
crates/talos-pilot-tui/src/components/: cluster.rs  diagnostics.rs  etcd.rs  home.rs  lifecycle.rs  logs.rs  mod.rs  multi_logs.rs  network.rs  node_operations.rs  processes.rs  rolling_operations.rs  security.rs  workloads.rs
crates/talos-pilot-tui/src/components/diagnostics/: core.rs  k8s.rs  mod.rs  pki.rs  types.rs
crates/talos-pilot-tui/src/components/diagnostics/addons/: cert_manager.rs  mod.rs
crates/talos-pilot-tui/src/components/diagnostics/cni/: cilium.rs  flannel.rs  mod.rs
crates/talos-rs/src/: auth.rs  client.rs  config.rs  lib.rs  talosctl.rs
src/: main.rs
test-clusters/: README.md
test-clusters/patches/: cilium-cni.yaml  cilium-ebpf.yaml  hubble.yaml  kubespan.yaml
test-clusters/scripts/: cluster.sh  nuke.sh
