[package]
name = "talos-pilot-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Terminal UI for talos-pilot"

[dependencies]
talos-pilot-core.workspace = true
talos-rs.workspace = true

# TUI
ratatui.workspace = true
crossterm.workspace = true
tachyonfx.workspace = true

# TLS (for crypto provider)
rustls.workspace = true

# Async
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true

# Error handling
color-eyre.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Clipboard
arboard.workspace = true

# Kubernetes client
kube.workspace = true
k8s-openapi.workspace = true

# Serialization
serde_yaml.workspace = true
base64.workspace = true

# Certificate parsing
x509-parser.workspace = true

# Date/time handling
chrono.workspace = true
